feat: GASP-1795: improve token price precision
