# stash/src/app.ts
@@ -17,6 +17,7 @@ import * as faucetController from './controller/FaucetController.js'
 import * as tracingController from './controller/TracingController.js'
 import * as tradingController from './controller/TradingController.js'
 import * as airdropController from './controller/mgxAirdropController.js'
+import * as tokenPriceController from './controller/TokenPriceController.js'
 
 import { createRequire } from 'module'
 const require = createRequire(import.meta.url)
@@ -120,6 +121,9 @@ app.get(
 
   tracingController.getATransactionByEntityId
 )
+
+//Token prices endpoint
+app.get('/price/token/:tokenId', tokenPriceController.getTokenPrices)
 
 // Dashboard endpoint
 app.get('/account/:wallet/dashboard', tradingController.getData)
